add parameters for swagger so people can test stuff
