# src/controllers/auth.controller.js
@@ -13,6 +13,14 @@ module.exports = {
     #swagger.tags = ["Authentication"]
     #swagger.summary = "JWT Login"
     #swagger.description = "Login using username and password"
+    #swagger.parameters["body"] = {
+      in: "body",
+      required: true,
+      schema: {
+        username: "test",
+        password: "1234"
+      }
+    }
     */
     const checkUser = await checkUserAndSetToken(jwtData);
     if (checkUser.error) {
@@ -27,6 +35,15 @@ module.exports = {
     #swagger.tags = ["Authentication"]
       #swagger.summary = "JWT Refresh"
        #swagger.description = "Refresh token"
+           #swagger.parameters["body"] = {
+      in: "body",
+      required: true,
+      schema: {
+        token: {
+          refresh: "...refreshToken..."
+        }
+      }
+    }
     */
     const refreshToken = req.body?.token?.refresh || null;
     if (refreshToken) {
